tests/typecheck/pass/range_ife_nest.sail
function ([|63|]) branch (([|63|]) x) =
{
  if (x < 32)
  then {
    if (x >= 32)
    then (x + 500)
    else (x + 2)
  }
  else (x - 2)
}
