tests/typecheck/fail/range_ife2.sail
function ([|63|]) branch (([|63|]) x) =
{
  if (x < 32)
  then x + 2
  else (x - 500)
}
